[package]
name = "ktx"
version = "0.1.0"
authors = ["David Lin <davll.xc@gmail.com>"]
edition = "2018"
repository = "https://github.com/davll/ktx"
license = "MIT"
description = "KTX texture format reader written in Rust"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["async"]
async = ["tokio", "async-stream", "futures-core"]

[dependencies]
async-stream = { version = "0.2", optional = true }
byteorder = "1.3"
error-chain = "0.12"
futures-core = { version = "0.3", optional = true }
num-traits = "0.2"
num-derive = "0.3"
tokio = { version = "0.2.3", features = ["full"], optional = true }

[dev-dependencies]
gl = "0.14"
glutin = "0.22.0-alpha5"
lazy_static = "1.4"
