[package]
name = "ktx-async"
version = "0.1.1"
authors = ["David Lin <davll.xc@gmail.com>"]
edition = "2018"
repository = "https://github.com/davll/ktx"
license = "MIT"
description = "Asynchronous reader for KTX texture format"
readme = "README.md"
exclude = ["data/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges.travis-ci]
repository = "davll/ktx"
branch = "master"

[features]
default = []

[dependencies]
async-stream = { version = "0.2" }
byteorder = "1.3"
error-chain = "0.12"
futures-core = { version = "0.3" }
tokio = { version = "0.2.3", features = ["io-util"] }

[dev-dependencies]
futures-util = { version = "0.3" }
gl = "0.14"
glutin = "0.22.0-alpha5"
lazy_static = "1.4"
tokio = { version = "0.2.3", features = ["full"] }
