[package]
name = "ktx-async-demo-basic"
version = "0.1.0"
authors = ["David Lin <davll.xc@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3" }
gl = "0.14"
glutin = "0.22.0-alpha5"
ktx-async = { path = "../.." }
lazy_static = "1.4"
tokio = { version = "0.2.3", features = ["full"] }
